Use constants for configuration
Simplify extreme captcha code generation
Add language setting to profile
Add checks for required extensions
Move some more settings to the database
Add CSS to limit list of chatters hight
Attempt to create database when there is no connection
Add fallback option for moderator approval
Fix guestaccess selection in setup

Version 1.15.3 - Mar. 6, 2016
Allow using html tags in linkfilter without breaking dereferrer or image embed
Added French translation
Added 2 Spanish translations.

Version 1.15.2 - Jan. 26, 2016
Don't display kicked people
Fix deadlock warning
Added Indonesian translation

Version 1.15.1 - Dec. 19, 2015
Fix XSS vulnerability in change nickname + make it available for registered users only

Version 1.15 - Dec. 17, 2015
Made code reading easier for newbies
Removed inefficient memcached caching of members and ignored
Display access denied page for non-authorized use of sub-sections.
Added change nickname option in profile
Various bugfixes

Version 1.14.1 - Nov. 2, 2015
Ignore possible deadlock warning
Only display the let users in button when there are guests waiting to be let in
Fix filter and ignore feature if they have multiple values

Version 1.14 - Oct. 31, 2015
Added support for sqlite and PostgreSQL database engines
Replaced deprecated HTML with CSS for HTML5 compatibility
Show Topic on login and don't prepend "Topic:"
More optimizations and fixes

Version 1.13.1 - Sep. 15, 2015
Fix saving some setup settings

Version 1.13 - Sep. 15, 2015
Switch from mysqli to PDO
More optimizations
Match case-insensitive @mention and also non-present members
Added topic field
Member password resetting by admins
Note revisioning
Added optional tiny JavaScript code to transfer less data with JavaScript enabled browsers

Version 1.12.3 - Aug. 18, 2015
Fix member registration

Version 1.12.2 - Aug. 18, 2015
Fix redirection and image embedding

Version 1.12.1 - Aug. 17, 2015
Fix update query

Version 1.12 - Aug. 17, 2015